--- a/ToDo-API-Server/ToDo-API-Server.csproj
+++ b/ToDo-API-Server/ToDo-API-Server.csproj
@@ -19,6 +19,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="7.2.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.ReDoc" Version="7.2.0" />
   </ItemGroup>
 
 </Project>
