--- a/ToDo-API-Server/appsettings.json
+++ b/ToDo-API-Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "AppDb": "Host=yourhost; Port=5432; Database=todoremote_db; Username=postgresql; Password=YourPassword;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
