Added new migration and seeding logic for fresh postgresql databases. Added new configurations in appSettings.json for production. Phasing out #if DEBUG statements and added landing page base.

--- a/ToDo-API-Server/appsettings.json
+++ b/ToDo-API-Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AppDb": "Host=yourhost; Port=5432; Database=todoremote_db; Username=postgresql; Password=YourPassword;"
+    "AppDb": "Host=databasehost; Port=5432; Database=database; Username=postgres; Password=password;"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +8,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SeedData": {
+    "AdminEmail": "",
+    "AdminPassword": ""
+  },
+  "HostSettings": {
+    "ApiUrl": ""
+  }
 }
